@@ -12,12 +12,13 @@ _module_id_ = '$Id$'
 # Import system modules
 #
 from django import forms
-
+import feedparser
+import logging
 
 #
 # Import Local modules
 #
-
+from oneoffcast.models import Podcast
 
 #
 # Module
@@ -37,5 +38,31 @@ class ShowFeedContentsForm(forms.Manipulator):
         return
 
     def save(self, new_data):
-        raise NotImplementedError('Do not know how to save a ShowFeedContentsForm yet')
-    
+        url = new_data['url']
+        
+        #
+        # Do we already know about the feed?
+        #
+        logging.debug('checking for existing podcast')
+        existing_casts = Podcast.objects.filter(feed_url=url)
+        if existing_casts.count() > 0:
+            podcast = existing_casts[0]
+            logging.debug('found existing podcast')
+
+            data = feedparser.parse(url)
+            
+        else:
+            logging.debug('parsing %s' % url)
+            data = feedparser.parse(url)
+
+            name = data.feed.title
+            description = data.feed.description
+            home_url = data.feed.link
+            
+            podcast = Podcast(name=name,
+                              description=description,
+                              home_url=home_url,
+                              feed_url=url,
+                              )
+            podcast.save()
+        return podcast, data
